Bug 169491 - [26.2] Character Scale Width does not work
Summary: [26.2] Character Scale Width does not work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0 target:26.2.2.2
Keywords: bibisected, bisected, regression
: 171015 171284 171365 171389 171397 171408 171496 (view as bug list)
Depends on:
Blocks: CJK Writer-Styles-Character
  Show dependency treegraph
 
Reported: 2025-11-17 12:56 UTC by nobu
Modified: 2026-04-09 20:01 UTC (History)
11 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample Output (55.00 KB, image/png)
2025-11-17 12:59 UTC, nobu
Details
Sample odt (16.65 KB, application/vnd.oasis.opendocument.text)
2025-11-17 13:00 UTC, nobu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2025-11-17 12:56:12 UTC
Description:
Character Scale Width does not work.


Steps to Reproduce:
1. Open new Writer.
2. Insert Text "AAABBB".
3. Select Text "AAA".
4. Open Character dialog. ( Menu - Format > Character ) [ Alt + C ]
5. Position tab > Rotation / Scaling > Scale width : Change 100% to 50% .

Actual Results:
6. The width of "AAA" remains unchanged, while "BBB" appears partially overlapping.

Expected Results:
6. The width of "AAA" shrinks to 50%.


Reproducible: Always


User Profile Reset: No

Additional Info:

The following solution didn't work with the latest master version:
https://ask.libreoffice.org/t/libreoffice-writer/128934/2

Reproducible
[2025-09-17]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d48fddcd2014c1366766b3785f8b533f8cb545c7
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded

Reproducible
[2025-11-17]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded

Reproducible
[2025-11-13]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d2def868cb3ac5a7e538a911e83d7d907a2ec794
CPU threads: 2; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: ja-JP
Calc: threaded

===

Not Reproducible
[2025_07_23]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7f4868348c14b305fcd75744e1e3544d0d3a5d61
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 1 nobu 2025-11-17 12:59:33 UTC
Created attachment 204041 [details]
Sample Output
Comment 2 nobu 2025-11-17 13:00:05 UTC
Created attachment 204042 [details]
Sample odt
Comment 3 Takenori Yasuda 2025-11-17 14:22:01 UTC
Reproducible:
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo
https://dev-builds.libreoffice.org/daily/master/Win-x86_64@tb103-1-TDF/2025-11-17_03.04.22/

Not Reproducible:
Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 8; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo


When I copied the problematic section that occurred in version 26.2 and pasted it into version 25.8, it displayed correctly.

However, in both versions, the cursor movement and the highlight width in the Style Inspector were similarly reduced in the 50% scale-width portion, which appears to be consistent and expected behavior.

Additionally, the issue was also observed when exporting to PDF.

Based on these observations, it seems that the formatting with 50% scale width is being applied correctly, and the issue may lie in how the characters are being rendered.
Comment 4 Saburo 2025-11-17 23:40:03 UTC
bibisected with linux-64-26.2
commit 45ec7bd76196dcc60b4c2db2f6f00623ecbaf5a4
author	László Németh <nemeth@numbertext.org>

tdf#168251 cui offapi xmloff sw glyph scaling: extend UNO/UX/ODF

adding CC: László Németh
Please, take a look?
Comment 5 Xisco Faulí 2026-01-13 12:27:52 UTC
Still reproducible in

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 2d68362dac381247081f8a750f3b6d83d9b69ac2
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 6 jon.tech.uk 2026-02-06 18:34:45 UTC
*** Bug 170641 has been marked as a duplicate of this bug. ***
Comment 7 nobu 2026-03-12 21:26:41 UTC
Still reproducible
[2026-03-12]
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 843122769d734f075545936d7f80d935e8f3ad26
CPU threads: 2; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded
Comment 8 Regina Henschel 2026-03-12 22:39:09 UTC
*** Bug 171284 has been marked as a duplicate of this bug. ***
Comment 9 Saburo 2026-03-13 15:30:26 UTC
It might have been fixed in tdf#171161.
Comment 10 Regina Henschel 2026-03-13 17:28:18 UTC
It is still a problem in Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 437f5e6eee1bb9ba67cd2f60fce13901d7742af9
CPU threads: 32; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
Comment 11 nobu 2026-03-13 22:35:46 UTC
(In reply to Saburo from comment #9)
> It might have been fixed in tdf#171161.

I also thought so, but it seems that this bug hasn't been fixed in available versions after the commit.
The developers don't seem to have noticed this bug.
But Regina Henschel reported it to them.
If the developers don't ignore this report, the bug should be fixed soon.
Comment 12 nobu 2026-03-17 12:02:15 UTC
*** Bug 171365 has been marked as a duplicate of this bug. ***
Comment 13 nobu 2026-03-17 12:03:24 UTC
*** Bug 171015 has been marked as a duplicate of this bug. ***
Comment 14 jon.tech.uk 2026-03-17 16:30:11 UTC
Still reproducible in latest release:

Version: 26.2.2.1 (X86_64)
Build ID: 251225596f12c6d3f2985252eb1eaca9640c7bfd
CPU threads: 4; OS: Linux 6.19; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded

Fixed in the latest development build:

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 2a44da446dc5986ead83637efad6a11cddcdfac2
CPU threads: 4; OS: Linux 6.19; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded

Please test the latest master dated 2026-03-17 or newer.

Thank you devs - awaiting the fix to arrive in stable release!
Comment 15 nobu 2026-03-18 19:34:18 UTC
*** Bug 171389 has been marked as a duplicate of this bug. ***
Comment 16 Commit Notification 2026-03-19 03:05:06 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f25371fa95b2c46ff4a73ef6995c341c157e62d4

tdf#169491 tdf#168251 sw glyph scaling: fix all scale width regressions

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 László Németh 2026-03-19 03:21:18 UTC
Fixed by the previous commit.

The other regression, the paragraph-level problem was fixed in Bug 171161. The text span and paragraph regressions were not exactly duplicates, at least it was possible to fix them separately.

The remaining problem (but not a regression) is applying custom scale width during the automatic line-level glyph scaling (the new microtypography feature).

@nobu and all: thanks for your report and feedback!
Comment 18 nobu 2026-03-19 03:41:17 UTC
Thank you.
I will be able to confirm that it has been corrected properly in the master version tomorrow.
Comment 19 nobu 2026-03-19 05:21:38 UTC
*** Bug 171397 has been marked as a duplicate of this bug. ***
Comment 20 nobu 2026-03-19 11:49:10 UTC
Works well. Thank you.
[2026-03-19]
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 38ea6c42fd0bfdb0904d182627229cf224c1b822
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded
Comment 21 Commit Notification 2026-03-19 12:28:51 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/9cc36a67a2bd04bca06bc52a77aad403bde008b7

tdf#169491 tdf#168251 sw glyph scaling: fix all scale width regressions

It will be available in 26.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 László Németh 2026-03-19 16:58:29 UTC
(In reply to nobu from comment #20)
> Works well. Thank you.

Many thanks for the verification and feedback!
Comment 23 Commit Notification 2026-03-19 21:33:53 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-26-2-2":

https://git.libreoffice.org/core/commit/5060eb926501378f1b5568f24fd56a757e4101c3

tdf#169491 tdf#168251 sw glyph scaling: fix all scale width regressions

It will be available in 26.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 24 nobu 2026-03-20 04:20:00 UTC
No problem in latest Linux version.
[2026-03-20]
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 5257ad4ec11bafcc2765ef5bb3e8cfb37ac7742c
CPU threads: 2; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded
Comment 25 Mateusz Wlazłowski 2026-03-20 18:02:12 UTC
*** Bug 171408 has been marked as a duplicate of this bug. ***
Comment 26 Saburo 2026-03-26 23:29:00 UTC
*** Bug 171496 has been marked as a duplicate of this bug. ***
Comment 27 nobu 2026-03-27 00:28:54 UTC
It works correctly in the next official update version that will be released soon.

Version: 26.2.2.2 (X86_64)
Build ID: 1f77d10d6938fd34972958f64b2bcfa54f8b1ba5
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded