sw/source/core/inc/drawfont.hxx
@@ -75,7 +75,7 @@ class SW_DLLPUBLIC SwDrawTextInfo
     tools::Long m_nSpace = 0;
     tools::Long m_nKern = 0;
     tools::Long m_nLetterSpacing = 0;
-    sal_Int16 m_nScaleWidth = 100;
+    sal_Int16 m_nScaleWidth = -1;
     TextFrameIndex m_nNumberOfBlanks = TextFrameIndex{ 0 };
     sal_uInt8 m_nCursorBidiLevel = 0;
     bool m_bBullet : 1;
