sw/source/core/txtnode/swfont.cxx
@@ -1146,7 +1146,7 @@ void SwSubFont::DrawText_( SwDrawTextInfo &rInf, const bool bGrey )
         ChgFnt( rInf.GetShell(), rInf.GetOut() );
 
     // change glyph scaling, if needed
-    if ( GetPropWidth() != rInf.GetScaleWidth() )
+    if ( rInf.GetScaleWidth() > 0 && GetPropWidth() != rInf.GetScaleWidth() )
     {
         SetPropWidth( rInf.GetScaleWidth() );
         ChgFnt( rInf.GetShell(), rInf.GetOut() );
